--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
